# aimf

./: AIMF-DESIGN.md  AIMF-v1-SPEC.md  CLAUDE.md  TASK-example.task.md  aimf.aimf  project.aimf
Documents/: AIMF-Detailed.mermaid  AIMF-High-Level.mermaid  AIMF-Project-Blueprint.docx  AIMF-v2-Detailed.mermaid  AIMF-v2-High-Level.mermaid  startingPoint.md
aimf-compiler/src/: index.html
aimf-compiler/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
aimf-compiler/src-tauri/src/: cli.rs  lib.rs  main.rs  types.rs
aimf-compiler/src-tauri/src/classifier/: mod.rs
aimf-compiler/src-tauri/src/curator/: mod.rs
aimf-compiler/src-tauri/src/emitter/: mod.rs
aimf-compiler/src-tauri/src/hot_strategy/: mod.rs
aimf-compiler/src-tauri/src/partitioner/: mod.rs
aimf-compiler/src-tauri/src/scanner/: mod.rs
aimf-compiler/src-tauri/src/session_miner/: mod.rs
aimf-reader/: SKILL.md
aimf-reader/references/: AIMF-v1-SPEC.md
aimf-reader/scripts/: parse_aimf.py
