[package]
name = "aimf-compiler"
version = "0.2.0"
edition = "2021"
description = "Generate AIMF navigation manifests from project directories"
license = "MIT"

[lib]
name = "aimf_compiler"
path = "src/lib.rs"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = "0.4"
regex = "1"

# Optional: Tauri desktop app
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }

# Optional: CLI binary
clap = { version = "4", features = ["derive"], optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
default = []
cli = ["clap"]
tauri = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs", "dep:tauri-build"]

[[bin]]
name = "aimf"
path = "src/cli.rs"
required-features = ["cli"]

[[bin]]
name = "aimf-desktop"
path = "src/main.rs"
required-features = ["tauri"]
